@@ -1,0 +1,2 @@
+%:
+	dh ${@} --with=blah
